force-app/main/default/objects/RTL_Upload_Campaign_Members__c/RTL_Upload_Campaign_Members__c.object-meta.xml
<CustomObject>
    <label>Upload Campaign Member</label>
    <nameField>
        <displayFormat>UCM-{0000000}</displayFormat>
        <label>Upload Campaign Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTL Upload Campaign Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>