force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_ADDRESS1__c.field-meta.xml
<CustomField>
    <fullName>RTL_ADDRESS1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_ADDRESS1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>