force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Batch_Telephone__c.field-meta.xml
<CustomField>
    <fullName>RTL_Batch_Telephone__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Batch Telephone</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>