force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_CHANNEL_OTHER__c.field-meta.xml
<CustomField>
    <fullName>RTL_CHANNEL_OTHER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL CHANNEL OTHER</label>
    <length>5</length>
    <type>Text</type>
</CustomField>