force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_CHANNEL_SMS__c.field-meta.xml
<CustomField>
    <fullName>RTL_CHANNEL_SMS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_CHANNEL_SMS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>