force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Citizen_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Citizen_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Citizen ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>