force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>