force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>RTL_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>