force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Ext__c.field-meta.xml
<CustomField>
    <fullName>RTL_Ext__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_Ext</label>
    <length>50</length>
    <type>Text</type>
</CustomField>