force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_FB_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_FB_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_FB_ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>