force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_ID_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL ID Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>