force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>RTL_ImportStatus__c</fullName>
    <description>Import Status text to Campaign Member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_ImportStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>