force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_ImportToType__c.field-meta.xml
<CustomField>
    <fullName>RTL_ImportToType__c</fullName>
    <label>RTL_ImportToType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>