force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Lead__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RTL_Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Upload_Campaign_Members_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>