force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>RTL_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>