force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_PRODUCT_FEATURE__c.field-meta.xml
<CustomField>
    <fullName>RTL_PRODUCT_FEATURE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_PRODUCT_FEATURE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>