force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_PROMOTION__c.field-meta.xml
<CustomField>
    <fullName>RTL_PROMOTION__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_PROMOTION</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>