force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_PROVINCE__c.field-meta.xml
<CustomField>
    <fullName>RTL_PROVINCE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_PROVINCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>