force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Rating__c.field-meta.xml
<CustomField>
    <fullName>RTL_Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>