force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_REMARK2__c.field-meta.xml
<CustomField>
    <fullName>RTL_REMARK2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL_REMARK2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>