force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Row_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_Row_No__c</fullName>
    <label>RTL Row No.</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>