force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>RTL_Source_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RTL Source Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>