force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Upload_Campaign_Member_Batch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Upload_Campaign_Member_Batch__c</fullName>
    <label>RTL Upload Campaign Member Batch</label>
    <referenceTo>RTL_Upload_Campaign_Member_Batch__c</referenceTo>
    <relationshipName>Upload_Campaign_Members</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>