force-app/main/default/objects/RTL_Upload_Campaign_Members__c/fields/RTL_Upload_Campaign_Member_Logs__c.field-meta.xml
<CustomField>
    <fullName>RTL_Upload_Campaign_Member_Logs__c</fullName>
    <label>RTL Upload Campaign Member Logs</label>
    <referenceTo>RTL_Upload_Campaign_Member_Logs__c</referenceTo>
    <relationshipName>Upload_Campaign_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>